alteração "nice to meet you"

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const last_posts = posts.slice(0, 3);
 
 <BaseLayout sideBarActiveItemID="home">
   <div class="pb-12 mt-5">
-    <div class="text-xl py-1">Hey there 👋</div>
+    <div class="text-xl py-1">Hey there nice to meet you 👋</div>
     <div class="text-5xl font-bold">I'm Daniel Felipe</div>
     <div class="text-3xl py-3 font-bold">Software Engineer and Entrepreneur</div>
     <div class="py-2">
